# opencv-examples

./: .gitignore  README.md
AndroidOpenCV/: .gitignore
AndroidOpenCV/app/: proguard-rules.pro
AndroidOpenCV/app/src/main/: AndroidManifest.xml
AndroidOpenCV/app/src/main/jni/: Android.mk  hello-android-jni.c
AndroidOpenCV/gradle/wrapper/: gradle-wrapper.properties
CVideoStream/: .gitignore  CMakeLists.txt  main.cpp
CartoonifierDesktop/: .gitignore  CMakeLists.txt  cartoon.cpp  cartoon.h  main.cpp
FaceDetection/src/com/ivanmagda/cv/: Controller.java  Main.java
FourierTransform/src/com/ivanmagda/cv/: Controller.java  Main.java  sample.fxml
HelloWorld/src/: Main.java
ImageSegmentation/src/com/ivanmagda/cv/: Main.java  (+2 more)
VideoStream/src/app/: Controller.java  Main.java  sample.fxml
VideoStream/src/app/utils/: Utils.java
iOS-AR/iOS-AR/: ARKeyboard.h  ARKeyboard.m  AppDelegate.h  AppDelegate.m  BGRAVideoFrame.h  CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  EAGLView.h  EAGLView.m  GeometryTypes.cpp  GeometryTypes.hpp  Keyboard.xib  LaunchScreen.storyboard  Marker.cpp  Marker.hpp  MarkerDetector.cpp  MarkerDetector.hpp  MarkerDetectorUtils.h  MarkerDetectorUtils.mm  SimpleVisualizationController.h  SimpleVisualizationController.mm  TinyLA.cpp  TinyLA.hpp  VideoSource.h  VideoSource.mm  ViewController.h  ViewController.mm  iOS-AR-Info.plist  iOS-AR-Prefix.pch  main.m
iOS-AR/iOS-AR.xcodeproj/: project.pbxproj
iOS-AR/iOS-AR.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS-AR/iOS-AR/en.lproj/: MainStoryboard_iPhone.storyboard
(+23 files in other folders)
